# sample-gRPC-images

jdk17-client/: Dockerfile  settings.gradle
jdk17-client/src/main/java/com/noahmlr/grpc/samples/: HelloWorldClient.java  Main.java
jdk17-server/: Dockerfile  build.gradle  settings.gradle
jdk17-server/src/main/java/com/noahmlr/grpc/samples/: HelloWorldServer.java  Main.java  NewtonMathServer.java
jdk17-spring-client/: Dockerfile  build.gradle  settings.gradle
jdk17-spring-client/src/main/java/com/noahmlr/grpc/samples/: HealthCheckController.java  HelloWorldClient.java  HelloWorldController.java  Jdk17Application.java  MathCalculation.java  MathCalculationResult.java  NewtonMathClient.java  NewtonMathController.java  ProtobufConfiguration.java  WebConfiguration.java
jdk17-spring-client/src/main/proto/: helloworld.proto  newtonmath.proto
rust_server/: Cargo.toml  build.rs
rust_server/proto/: newtonmath.proto
rust_server/src/: server.rs
web-component/: Dockerfile  package.json
web-component/src/: App.svelte  HealthCheck.svelte
