[package]
name = "rust_server"
version = "0.1.0"
authors = ["noahmlr <nmillercontact@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prost = "0.8"
tonic = "0.5"
tokio = {version="1.0", features = ["macros", "rt-multi-thread"]}
futures = "0.3"

[build-dependencies]
tonic-build = "0.5"

[[bin]] # Bin to run the HelloWorld gRPC server
name = "helloworld-server"
path = "src/server.rs"
