[package]
name = "rust_server"
version = "0.1.0"
authors = ["noahmlr <nmillercontact@gmail.com>"]
edition = "2018"

[[bin]] # Bin to run the NewtonMath gRPC server
name = "math-server"
path = "src/server.rs"

[dependencies]
tonic = "0.5"
prost = "0.8"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }

[build-dependencies]
tonic-build = "0.5"